# hpc

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  cache_blocking.cpp  conanfile.txt  deep_stack.cpp  false_sharing.cpp  false_sharing_fixed.cpp  memory_optimization.cpp  omp.cpp  parallel_sum.cpp  parallel_sum_local.cpp  practice.cpp  project_config.txt  simd_omp.cpp  spdlog_sample.cpp  structured_logging.cpp  timing.cpp  twodarray.cpp
.github/: copilot-instructions.md
scripts/: build.sh  clean.sh  run.sh
